--- a/css/index.css
+++ b/css/index.css
@@ -927,7 +927,7 @@ i {
 @media (min-width: 360px) and (max-width: 900px){
     .d-flex{
         flex-direction: column;
-        align-items: baseline;
+        align-items: start;
     }
     .container{
         padding: 2% 5%;
@@ -949,15 +949,28 @@ i {
         display: flex !important;
         flex-direction: column;
     }
+    .nav-dark.d-flex{
+        flex-direction: row !important;
+        align-items: center;
+    }
     .electric > div > div {
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
       }
-      .form-sec > div{
+      .back2 .d-flex{
+        justify-content: center !important;
+        align-items: center !important;
+      }
+      .form-sec > div {
         width: 100%;
-        display:inline-block !important;
         margin: 0;
+      }
+      .form-sec form > div{
+        width: 100%;
+        margin-bottom: 10px;
+        display: flex;
+        flex-direction: column;
       }
       .blog1 > div > div> div{
         flex-direction: row !important;
