--- a/css/index.css
+++ b/css/index.css
@@ -52,14 +52,17 @@ li {
     max-width: 1100px;
     margin: 0 auto;
 }
-.nav-light{
+
+.nav-light {
     gap: 15px;
-} 
+}
+
 .header-icons {
     color: var(--orange-color);
     font-size: 30px;
     gap: 20px;
 }
+
 .mb-4 {
     margin-bottom: 2rem !important;
 }
@@ -70,6 +73,14 @@ li {
     font-size: 14px;
 }
 
+.nav-dark span {
+    display: none;
+    font-size: 19px;
+    font-weight: 300;
+    letter-spacing: 4px;
+    color: rgba(255, 255, 255, 0.7);
+}
+
 nav a {
     color: white;
 }
@@ -77,18 +88,22 @@ nav a {
 nav ul {
     gap: 50px;
 }
-nav ul li:first-child a{
-    color:var(--orange-color);
+
+nav ul li:first-child a {
+    color: var(--orange-color);
 }
+
 nav ul li:first-child a:hover {
-    color:white;
+    color: white;
 }
-nav img{
-    width: 30px;
-    height: 30px;
+
+nav img {
+    width: 40px;
+    height: 40px;
     display: none;
 
 }
+
 header>div {
     padding: 26px 0;
 }
@@ -207,9 +222,9 @@ h4 {
     background-color: var(--orange-color);
     width: 100%;
     display: flex;
-   flex-direction: column;
-   justify-content: flex-end;
-   align-items: center;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .services1 {
@@ -219,23 +234,27 @@ h4 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
- }
+}
+
 .services1 h3 {
     color: white;
     text-align: center;
     padding-bottom: 20px;
 }
+
 .services h3 {
     color: white;
     text-align: center;
     padding-bottom: 20px;
 }
-.services1 p{
+
+.services1 p {
     color: white;
     text-align: center;
     padding: 20px 20px 50px 20px;
     line-height: 2;
 }
+
 .services p {
     color: white;
     text-align: center;
@@ -243,11 +262,12 @@ h4 {
     line-height: 2;
 }
 
-.offer-back{
+.offer-back {
     background: url('./../theme-fox/about.jpg') no-repeat center center /cover;
     width: 100%;
     height: 700px;
 }
+
 .offer-h2 {
     margin: 30px auto;
     color: black;
@@ -297,6 +317,7 @@ h2 {
     width: 100%;
     height: 400px;
 }
+
 .icon-video {
 
     font-size: 80px;
@@ -308,6 +329,7 @@ h2 {
     left: 40%;
     border-radius: 50%;
 }
+
 .back2 h2 {
     text-align: center;
     margin: 50px auto;
@@ -332,12 +354,11 @@ h2 {
     color: var(--tex-body);
     line-height: 2;
     text-align: center;
-    padding: 30px 100px;
 }
 
 .electric {
     gap: 25px;
-    margin:10px 50px;
+    margin: 10px 50px;
     padding-top: 100px;
 }
 
@@ -347,31 +368,33 @@ h2 {
     gap: 6px;
     letter-spacing: 2px;
 }
+
 .electric-imgbox,
 .electric-imgbox2,
 .electric-imgbox3,
-.electric-imgbox4{
+.electric-imgbox4 {
     width: 100%;
     height: 300px;
     margin-bottom: 20px;
 }
+
 .electric-imgbox {
-    
+
     background: url('./../theme-fox/course-1.jpg') no-repeat center center /cover;
 }
 
 .electric-imgbox2 {
-   
+
     background: url('./../theme-fox/course-2.jpg') no-repeat center center /cover;
 }
 
 .electric-imgbox3 {
-    
+
     background: url('./../theme-fox/course-3.jpg') no-repeat center center /cover;
 }
 
 .electric-imgbox4 {
-  
+
     background: url('./../theme-fox/course-4.jpg') no-repeat center center /cover;
 }
 
@@ -437,14 +460,15 @@ h2 {
 .teacher-imgbox,
 .teacher-imgbox2,
 .teacher-imgbox3,
-.teacher-imgbox4{
+.teacher-imgbox4 {
     width: 100%;
     height: 300px;
     position: relative;
     overflow: hidden;
 }
-.teacher-imgbox {  
-    background: url('./../theme-fox/teacher-1.jpg') no-repeat top center /cover; 
+
+.teacher-imgbox {
+    background: url('./../theme-fox/teacher-1.jpg') no-repeat top center /cover;
 }
 
 .teacher-imgbox2 {
@@ -517,10 +541,12 @@ h2 {
     padding: 10px;
     border-radius: 30px;
 }
+
 .btn-primary:hover {
     background: transparent;
     color: var(--orange-color);
 }
+
 textarea,
 select {
     display: inline-block;
@@ -604,13 +630,15 @@ select {
 
     background: url('./../theme-fox/image_3.jpg') no-repeat top center /cover;
 }
+
 .blog1-imgbox,
 .blog1-imgbox2,
-.blog1-imgbox3{
+.blog1-imgbox3 {
     width: 100%;
     height: 300px;
     position: relative;
 }
+
 .blog1 {
     gap: 30px;
 }
@@ -660,14 +688,16 @@ select {
 .blog1 span i {
     color: var(--tex-body);
 }
+
 .meta-date {
     display: inline-block;
     background: #5d50c6;
     padding: 5px;
     position: absolute;
     top: 100%;
-    transform: translate(0,-100%);
+    transform: translate(0, -100%);
 }
+
 .text-center {
     text-align: center !important;
 }
@@ -676,16 +706,22 @@ select {
     font-weight: 700;
     font-size: 20px;
 }
-.meta-date .mos, .blog-entry .meta-date .yr {
+
+.meta-date .mos,
+.blog-entry .meta-date .yr {
     font-size: 13px;
 }
+
 .meta-date span {
     display: block;
     color: #fff;
 }
-.meta-date .mos, .blog-entry .meta-date .yr {
+
+.meta-date .mos,
+.blog-entry .meta-date .yr {
     font-size: 13px;
 }
+
 .student {
     margin: 100px auto;
     padding: 15px;
@@ -693,18 +729,22 @@ select {
     gap: 31px;
     justify-content: center;
 }
-.student h3{
+
+.student h3 {
     text-align: center;
 }
-.student >div>p:first-child {
+
+.student>div>p:first-child {
     text-align: center;
     color: var(--tex-body);
 }
-.mother{
+
+.mother {
     color: var(--orange-color);
     /* font-weight: 200; */
     font-size: 14;
 }
+
 .imgback-icon {
     width: 50%;
     position: relative;
@@ -747,15 +787,17 @@ select {
 .end-imgbox4 {
     background: url('./../theme-fox/bg_3.jpg') no-repeat center center / cover;
 }
+
 .end-imgbox,
 .end-imgbox2,
 .end-imgbox3,
-.end-imgbox4{
+.end-imgbox4 {
     width: 100%;
     height: 300px;
     position: relative;
     cursor: zoom-in;
 }
+
 .end-imgbox-icon {
     position: absolute;
     top: 40%;
@@ -826,14 +868,16 @@ footer section>div:first-child ul li {
     gap: 10px;
     margin-bottom: 20px;
 }
-footer section>div:nth-child(2) >div.d-flex{
+
+footer section>div:nth-child(2)>div.d-flex {
     gap: 20px;
     margin: 20px 0;
 }
 
-footer section>div:nth-child(2){
+footer section>div:nth-child(2) {
     width: 300px;
 }
+
 footer ul p {
     font-size: 15px;
 
@@ -900,9 +944,11 @@ i {
     padding: 15px;
     width: 100%;
 }
+
 .ft-submit:hover {
     background: var(--orange-color);
 }
+
 .ft-input {
     margin: 10px 0;
     padding: 15px;
@@ -924,58 +970,88 @@ i {
 .end-p a {
     color: rgba(255, 255, 255, 0.7);
 }
-@media (min-width: 360px) and (max-width: 900px){
-    .d-flex{
+
+@media (min-width: 360px) and (max-width: 900px) {
+    .d-flex {
         flex-direction: column;
         align-items: start;
     }
-    .container{
-        padding: 2% 5%;
+
+    .container {
+        padding: 2% 3%;
     }
-    .electric{
-        margin: 0 , 5%;
+
+    .electric {
+        margin: 0, 5%;
     }
-    header nav ul{
+    nav{
+        padding: 30px;
+        margin-bottom: 10px;
+    }
+
+    header nav ul {
         display: none !important;
     }
-    nav img{
-        display: block;
-        cursor: pointer;
+
+    .nav-light {
+        margin: 0 !important;
     }
+
+    .nav-light a {
+        display: inline-block;
+        position: absolute;
+        top: 25%;
+        left: 60%;
+    }
+    nav img {
+        display: inline-block;
+        cursor: pointer;
+        margin-bottom: 10px;
+    }
+
+    .nav-dark span {
+        display: inline-block;
+        position: absolute;
+        left: 13%;
+    }
+
     .nav-light {
         margin: 15px auto;
     }
-    input:checked + ul{
+
+    input:checked+ul {
         display: flex !important;
         flex-direction: column;
     }
-    .nav-dark.d-flex{
-        flex-direction: row !important;
-        align-items: center;
-    }
-    .electric > div > div {
+
+    .electric>div>div {
         flex-direction: row;
         flex-wrap: wrap;
         align-items: center;
-      }
-      .back2 .d-flex{
+    }
+
+    .back2 .d-flex {
         justify-content: center !important;
         align-items: center !important;
-      }
-      .form-sec > div {
+    }
+
+    .form-sec>div {
         width: 100%;
         margin: 0;
-      }
-      .form-sec form > div{
+    }
+
+    .form-sec form>div {
         width: 100%;
         margin-bottom: 10px;
         display: flex;
         flex-direction: column;
-      }
-      .blog1 > div > div> div{
+    }
+
+    .blog1>div>div>div {
         flex-direction: row !important;
-      }
-      footer > section > div:last-child ul{
+    }
+
+    footer>section>div:last-child ul {
         flex-direction: row !important;
-      }
+    }
 }
